# Multi-Agent-Research

./: .env.example  .gitignore  README.md  TUTORIAL.md  app.py  pyproject.toml  requirements.txt
src/: config.py  main.py
src/agents/: analyst.py  critic.py  search.py  supervisor.py  writer.py
src/graph/: edges.py  graph.py  state.py
src/tools/: search_tools.py  utils.py
tests/: test_agents.py  test_analyst.py  test_config.py  test_critic.py  test_graph.py  test_search.py  test_state.py  test_supervisor.py  test_writer.py
